--- a/legacy.tex
+++ b/legacy.tex
@@ -73,15 +73,16 @@ Here we point out how large and previously unreported batch effects in the early
 
 Genome wide mutational signatures have been used as a diagnostic tool for cancers \cite{Pleasance2010,Shiraishi2015a}.
 Certain mutagens in tobacco smoke, for example, have been shown to preferentially bind to certain genomic motifs leading to an excess of G to T transversions \cite{Pleasance2010}.
-This means that the genomic context of a mutation can be used to gain insight into the cause of this mutation [\cite{}].
+This means that the genomic context of a mutation can be used to gain insight into the cause of this mutation \cite{Pleasance2010}.
 While certain mutagens have very distinct mutational signatures, others are more subtle and difficult to identify because they tend to occur less frequently and with less genomic specificity [\cite{}].
 Large cohorts have recently become available to increase statistical power to resolve some of these fine scale mutational signatures.
 
 Fine scale mutational signatures are observable on evolutionary scales by comparing the rates of mutations between populations.
-In 2015, Harris reported 50\% more TCC ${\rightarrow}$ TTC mutations in European populations compared to African populations; this was replicated in a different cohort in 2017 [\cite{}].
+In 2015, Harris reported 50\% more TCC ${\rightarrow}$ TTC mutations in European populations compared to African populations; this was replicated in a different cohort in 2017 \cite{Harris2015a}.
+A more in depth analysis of these subtle mutational signatures was recently released in preprint by Aikens, Johnson and Voight.  
 
-This strong population enrichment of a mutational signature suggests important genetic or environmental differences in the history of each population [\cite{}]. 
-Harris and Pritchard further identified distinct mutational spectra across a range of populations [\cite{}]. 
+This strong population enrichment of a mutational signature suggests important genetic or environmental differences in the history of each population \cite{Harris2015a}. 
+Harris and Pritchard further identified distinct mutational spectra across a range of populations \cite{Harris2017a}. 
 In particular, they identified a heterogeneous mutational signature within 1000 Genomes Japanese individuals. 
 Such an axis of variation is intriguing because differences in mutational signatures accumulate over many generations. 
 A systematic difference among the Japanese population would suggest sustained environmental or genetic differences across sub-populations within Japan with little to no gene flow.
@@ -336,26 +337,3 @@ We would like to thank Kelly Harris for sharing her mutation spectrum pipelines.
 
 \end{document}
 			
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
