updated text for Aikens et al

--- a/legacy.tex
+++ b/legacy.tex
@@ -79,12 +79,14 @@ Large cohorts have recently become available to increase statistical power to re
 
 Fine scale mutational signatures are observable on evolutionary scales by comparing the rates of mutations between populations.
 In 2015, Harris reported 50\% more TCC ${\rightarrow}$ TTC mutations in European populations compared to African populations; this was replicated in a different cohort in 2017 \cite{Harris2015a}.
-A more in depth analysis of these subtle mutational signatures was recently released in preprint by Aikens, Johnson and Voight.  
+A more in depth analysis of these subtle mutational signatures was recently released in preprint by Aikens, Johnson and Voight. \cite{}
+In their study they expanded the investigations of mutational signals in the 1kGP by investigations to broader sequence contexts.
 
 This strong population enrichment of a mutational signature suggests important genetic or environmental differences in the history of each population \cite{Harris2015a}. 
 Harris and Pritchard further identified distinct mutational spectra across a range of populations \cite{Harris2017a}. 
-In particular, they identified a heterogeneous mutational signature within 1000 Genomes Japanese individuals. 
-Such an axis of variation is intriguing because differences in mutational signatures accumulate over many generations. 
+In particular, they identified a heterogeneous mutational signature within 1000 Genomes Japanese individuals.
+In addition, multiple 7-mer mutational signatures were also identified by Aikens et. al in the same populations. \cite{}
+Such an axis of variation is intriguing because differences in mutational signatures accumulate over many generations.
 A systematic difference among the Japanese population would suggest sustained environmental or genetic differences across sub-populations within Japan with little to no gene flow.
 We therefore decided to follow up on this observation, by using a newly sequenced dataset \sgcomment{description of cohort.}
 
@@ -118,7 +120,7 @@ The same analysis was performed independently for each of the populations in the
 			\section{Results}
 	\subsection{A peculiar mutational signature in Japan}			
 	
-Harris and Pritchard reported an excess of *AC${\rightarrow}$*CC mutations in a portion of the Japanese individuals in the 1kGP.\cite{Harris2015a}
+Harris and Pritchard reported an excess of a 3-mer *AC${\rightarrow}$*CC mutational pattern in a portion of the Japanese individuals in the 1kGP.\cite{Harris2015a}
 While trying to follow up on this observations in a larger and more recent Japanese cohort, we did not find this particular signature.
 However, when comparing the allele frequencies between the Japanese individuals from the 1kGP and this larger dataset, we observed an unusually large number of private single nucleotide polymorphisms (SNPs), only found in one of the two groups.
 This is unexpected given the similarity of the two populations, and suggests a technical artifact rather than a population structure effect. 
@@ -248,9 +250,11 @@ We were able to identify many variants with frequencies below \todo{the power th
 %issues with PCR?
 %repetitive regions, GC bias...
 
-%\subsection{GWAS from other papers}
-%The only way to distinguish some of these more covert false positives is to use statistical tests associating the quality metrics of each position relative to each individual. 
+\subsection{Twins Research Human Genetics}
+Genotype + Imputation + GWAS
 
+\subsection{PLos One}
+Using 1kGP data directly, estimating count of EBV
 
 			\section{Conclusion}
 Our method identifies spurious mutations by correlating mutations with data quality metrics. 
