--- a/legacy.tex
+++ b/legacy.tex
@@ -74,13 +74,13 @@ Here we point out how large and previously unreported batch effects in the early
 Genome wide mutational signatures have been used as a diagnostic tool for cancers \cite{Pleasance2010,Shiraishi2015a}.
 Certain mutagens in tobacco smoke, for example, have been shown to preferentially bind to certain genomic motifs leading to an excess of G to T transversions \cite{Pleasance2010}.
 This means that the genomic context of a mutation can be used to gain insight into the cause of this mutation \cite{Pleasance2010}.
-While certain mutagens have very distinct mutational signatures, others are more subtle and difficult to identify because they tend to occur less frequently and with less genomic specificity [\cite{}].
+While certain mutagens have very distinct mutational signatures, others are more subtle and difficult to identify because they tend to occur less frequently and with less genomic specificity \cite{Pleasance2010}.
 Large cohorts have recently become available to increase statistical power to resolve some of these fine scale mutational signatures.
 
 Fine scale mutational signatures are observable on evolutionary scales by comparing the rates of mutations between populations.
 In 2015, Harris reported 50\% more TCC ${\rightarrow}$ TTC mutations in European populations compared to African populations; this was replicated in a different cohort in 2017 \cite{Harris2015a}.
 A more in depth analysis of these subtle mutational signatures was recently released in preprint by Aikens, Johnson and Voight. \cite{}
-In their study they expanded the investigations of mutational signals in the 1kGP by investigations to broader sequence contexts.
+In their study they expanded the investigations of mutational signals in the 1kGP by investigations to broader sequence contexts and found differences in mutation profiles across populations. \cite{}
 
 This strong population enrichment of a mutational signature suggests important genetic or environmental differences in the history of each population \cite{Harris2015a}. 
 Harris and Pritchard further identified distinct mutational spectra across a range of populations \cite{Harris2017a}. 
@@ -139,6 +139,8 @@ We were able to identify 587 SNPs with $p < 10^{-8}$ and 1034 SNPs with $ p < 10
 While identifying putative low-quality SNPs to exclude, using a higher $p$-value threshold increases the stringency of the filtering (i.e., the traditional genome-wide significance threshold might not be a good guide for filtering).  
  %This GWAS included 104 Japanese individuals, 74 of which were sequenced in using the Genome Analyzer II while the rest were sequenced using the HiSeq 2000 of the 1kGP.
 The variants that are associated to the quality of mapped bases have an enrichment in *AC${\rightarrow}$*CC mutations. 
+A slight enrichment in GA*${\rightarrow}$GG* and GC*${\rightarrow}$GG* mutations is also present.
+By taking the reverse complement of *AC${\rightarrow}$*CC is GT*${\rightarrow}$GG*, these three enrichments can be summarized as G**${\rightarrow}$GG*.
 
 The signal is enriched in GWAS SNPs, but residual signal remains presumably because many rare alleles found in individuals with low-quality data remain unidentifiable using association techniques.
 For this reason, the heterogeneously distributed signal persisted in the 1kGP Japanese even after filtering the variants that were significantly associated to quality.
@@ -194,24 +196,22 @@ Crosses ( + ) represent SNPs that reach a genome wide significance greater than 
   \label{Manhattan}
 \end{figure*}
 
-	\subsection{Imputation}
+\subsection{Imputation}
 The state of the art imputations servers use a combination of many databases including many that are not freely available.
 For this reason, the details of the methods used to impute genomic data are not publicly available either.
 In order to investigate the proportion of variants that we've identified as being associated to quality that are being imputed, we submitted genotype data from the 1kGP and imputed it using the Michigan Imputation Server.
 We found that all of the SNPs we identified as being associated with quality were imputed.
 This suggests that the imputation reference panel includes individuals with low sequence quality, as well as the variants that have been shown to be associated to quality. 
 
-	\subsection{Found to be included in other GWAS }
+\subsection{Found to be included in other GWAS }
 Once we identified SNPs that were clearly associated with low quality, we searched the literature for any GWAS that might have called these erroneous variants as being significantly correlated with some biological trait. 
 Using the NHGRI-EBI Catalog of published genome-wide association studies we queried the rsIDs of the SNPs we identified as being low quality and found two recent publications that had found at least one of the variants to have reached genome wide significance in their study.
 
 One of these studies genotyped individuals and imputed the data using the HapMapII as a reference  database for imputation. 
-The other study used the 1kGP sequence data directly.
+The other study used the 1kGP sequence data and cell lines directly.
 Both papers used strict quality thresholds, including population genetic statistical tests such as the Hardy-Weinberg equilibrium test, deviations in expected allele frequency and sequencing data quality thresholds. 
 They also removed rare alleles and alleles with high degrees of missingness. 
 Despite using the state of the art quality controls, these erroneous variants managed not only to be imputed onto real genotype data, but they also reached genome wide significance for biological traits.
-
-
 
 \begin{center}
  \begin{tabular}{l l l r r} 
@@ -226,8 +226,31 @@ Mandage R &	2017	 & PLoS One	 & rs200655768, rs184202621,&28654678\\
  \end{tabular}
 \end{center}
 
-			\section{Discussion}
-%\subsection{Why do we care?}
+\section{Discussion}
+			
+\subsection{Twins Research Human Genetics}
+This paper identified SNPs associated to ADHD using a GWAS on quantitative measures of ADHD symptoms.
+While none of their SNPs reached significance below $ p < 10^{-8}$, they reported their results below significance below $ p < 10^{-5}$.
+The data used was imputed genotype data using Hapmap II as the reference.
+One of the top 25 SNPs in the GWAS on ADHD was identified as being significantly associated to data quality.
+
+While they are clear in reporting that these SNPs are not genome wide significant, one can imagine a meta-analysis using this dataset would include the false positive SNP we identified. 
+Furthermore, the approach they used to impute genotype data for GWAS is very common.
+A literature search of the keywords 'GWAS Genotype Imputation' yielded 19,300 results.
+
+\subsection{PLos One}
+This paper used the raw BAM files from the 1kGP to identify EBV copy number by comparing the coverage of mapped reads to EBV.
+They did PCR confirmation of EBV copy number using 7 samples from some of the populations, however all of these samples have relatively high quality data.
+They performed a GWAS on the EBV copy number and identified only one SNP with significance below $ p < 10^{-8}$. 
+However they reported the SNPs reading significance below $ p < 10^{-6}$. 
+Four of the SNPs in the top hits of the Asian populations we're identified by our regression against data quality. 
+
+The EBV strain was used to transform B-cells from blood samples from the 1kGP into lymphobastoid cell lines (LCLs).
+This is a commonly used transformation that helps preserve cell lines for long periods of time.
+It's unclear what exactly might be causing the association to EBV copy number and the data quality, however, one could speculate that perhaps different protocols were used in the cell culturing of certain samples from the 1kGP which might affect the replication of the virus in the cells, or somehow affect the overall quality of the sequencing data produced.
+Further investigations in the source of the issue could be done using the raw sequence data from the 1kGP along with the per sample per base quality metrics. 			
+
+\subsection{Technical Artifact}
 The variants identified in this study are likely to be technical artifacts from legacy technology.
 If these sequencing platforms are no longer being used then it it likely that these artifacts are no longer being actively introduced in recent sequence data.
 However, because the 1kGP data is widely used as a reference database, these variants are being imputed onto new genotype data.
@@ -236,25 +259,22 @@ However this is not the only method that would be affected by these false positi
 Polygenic risk scores, meta analyses and other methods that combine the scores of multiple variants might also include some of these variants in their analyses.
 The inclusion of these variants could also affect population genetics analyses that compare and contrast populations based on allele frequencies.
 
-%\subsection{Recommendations}
+\subsection{Recommendations}
 The most conservative approach would be to remove all individuals that don't meet the quality threshold as well as all the variants associated to low quality.
-In this case, we used a cut off of an average quality of mapped bases over 30. It is the minimum requirements for \todo{GATK variant calling} for them to have a minimum quality of 30.
+In this case, we used a cut off of an average quality of mapped bases over 30. 
+It is the minimum requirements for \todo{GATK variant calling} for them to have a minimum quality of 30.
 
 %\subsection{Power limits and Quality Controls}
-If these variants are truly spurious, why were they not identified by the Hardy-Weinberg test of heterozygosity?
-\todo{how many hetd do you need to detect HWE significance?}
-We were able to identify many variants with frequencies below \todo{the power threshold for HWE}.
+%If these variants are truly spurious, why were they not identified by the Hardy-Weinberg test of heterozygosity?
+%how many hetd do you need to detect HWE significance?
+%We were able to identify many variants with frequencies below \todo{the power threshold for HWE}.
 
 %\subsection{Technical Source of Error}
 %B tail trimming  (Minoche et al. Genome Biology 2011)
 %issues with PCR?
 %repetitive regions, GC bias...
 
-\subsection{Twins Research Human Genetics}
-Genotype + Imputation + GWAS
 
-\subsection{PLos One}
-Using 1kGP data directly, estimating count of EBV
 
 			\section{Conclusion}
 Our method identifies spurious mutations by correlating mutations with data quality metrics. 
