--- a/legacy.tex
+++ b/legacy.tex
@@ -102,7 +102,7 @@ Fortunately, the main conclusions of most of these studies remain supported by o
 Yet this begs the question: When should we retire legacy data?
 
 \begin{figure}
-\includegraphics[width=\hsize,keepaspectratio]{Figure1.jpg}
+\includegraphics[width=\hsize,keepaspectratio]{./Figures/Figure1.jpg}
 \caption{
 \textbf{A} 
 Mutation spectrum of the 1034 variants that reached a genome wide significance with a p value less than $p < 10^{-6}$  in a GWAS of sequencing quality. 
@@ -157,7 +157,7 @@ It's clear that there are many covariates that could be used to identify spuriou
 However, the average quality of mapped bases per individual appeared to be the best metric to identify spurious sites. 
 
 \begin{figure}
-\includegraphics[width=\hsize,keepaspectratio]{MapQualOverTime.jpg}
+\includegraphics[width=\hsize,keepaspectratio]{./Figures/MapQualOverTime.jpg}
 
 \caption{\textbf{A} The average mapping quality of each individual per population included in the 1000 Genomes sequencing project. The earliest sequencing data is used for individuals sequenced more than once. The x-axis is ranked by the mean sequencing date per population. \textbf{B} The x-axis is sorted by the sequencing date per individual. The colours indicate the sequencing centres that produced the data for each individual and the shape indicates whether the individual belongs to Phase 1 or Phase 3 of the 1000 Genomes project. The bottom plot indicates the sequencing technologies used over time.}
 \label{MapQual}
@@ -169,7 +169,7 @@ We found that 24 of the 26 populations in the 1kGP had SNPs significantly associ
 Comparing the results of each independent GWAS, we were able to identify over 3517 variants that were independently associated to low quality in at least two populations  (Figure \ref{OverLap}). 
 
 \begin{figure*}
-\includegraphics[width=\hsize,keepaspectratio]{SNPOverlap6.jpg}
+\includegraphics[width=\hsize,keepaspectratio]{./Figures/SNPOverlap6.jpg}
 
 \caption{Overlap of SNPs identified independently to be associated with quality. 
 The size of the crosses ( + ) are proportional to the -log10(p) value of that SNP.
@@ -324,7 +324,7 @@ We would like to thank Kelly Harris for sharing her mutation spectrum scripts.
 \setcounter{figure}{0}   	
 
 \begin{figure}
-\includegraphics[width=\hsize,keepaspectratio]{ManhattanPlot.jpg}
+\includegraphics[width=\hsize,keepaspectratio]{./Figures/ManhattanPlot.jpg}
 
 \caption{Manhattan plot of the -log10 p values for the combined test using the deviations from each population of the 1kGP. 
 There are 2007 and 3664 variants that reach p values greater than $ p < 10^{-8}$ and $ p < 10^{-6}$ respectively.
@@ -333,19 +333,19 @@ Crosses ( + ) represent SNPs that reach a genome wide significance greater than 
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=\hsize,keepaspectratio]{PC1_Correlation.jpg}
+\includegraphics[width=\hsize,keepaspectratio]{./Figures/PC1_Correlation.jpg}
 \caption{Regressions against mean quality per mapped base pair per individual is an excellent correlate with prevalence of the  *AC${\rightarrow}$*CC mutational signature in 1kGP, with individuals with low-quality data showing elevated rates of the signature.  }
 \label{PC1_Correlation}
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=\hsize,keepaspectratio]{RegressionPlot_mostSig2.jpg}
+\includegraphics[width=\hsize,keepaspectratio]{./Figures/RegressionPlot_mostSig2.jpg}
 \caption{Logistic regression of the most significantly associated SNP rs75254682 for the populations with significant association to quality.}
 \label{MostSig}
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=\hsize,keepaspectratio]{RegressionPlot.jpg}
+\includegraphics[width=\hsize,keepaspectratio]{./Figures/RegressionPlot.jpg}
 \caption{Logistic regression of rs6057648 for the populations with significant association to quality.}
 \label{TwinsSNP}
 \end{figure}
